--- a/tarifs.html
+++ b/tarifs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarifs - QRGUIDE.FR</title>
-    <link rel="icon" type="image/jpeg" href="../img/logo_icone.jpg">
+    <link rel="icon" type="image/jpeg" href="img/logo_icone.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a href="index.html"><img src="../img/logo.png" alt="QRGUIDE.FR" class="logo"></a>
+                <a href="index.html"><img src="img/logo.png" alt="QRGUIDE.FR" class="logo"></a>
                 <div class="nav-links">
                     <a href="index.html#fonctionnalites">Fonctionnalités</a>
                     <a href="index.html#comment-ca-marche">Comment ça marche</a>
@@ -143,9 +143,9 @@
                 <div class="plaque-product">
                     <div class="plaque-carousel">
                         <div class="carousel-images">
-                            <img src="../img/Qr%20guide%20exemple.png" alt="Plaque QR Guide" class="carousel-img active">
-                            <img src="../img/Qr%20guide%20mock%20up.png" alt="Plaque QR Guide mockup" class="carousel-img">
-                            <img src="../img/Qr%20guide%20exemple%202.png" alt="Plaque QR Guide exemple 2" class="carousel-img">
+                            <img src="img/Qr%20guide%20exemple.png" alt="Plaque QR Guide" class="carousel-img active">
+                            <img src="img/Qr%20guide%20mock%20up.png" alt="Plaque QR Guide mockup" class="carousel-img">
+                            <img src="img/Qr%20guide%20exemple%202.png" alt="Plaque QR Guide exemple 2" class="carousel-img">
                         </div>
                         <div class="carousel-dots">
                             <span class="dot active" onclick="currentSlide(0)"></span>
@@ -226,7 +226,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <img src="../img/logo.png" alt="QRGUIDE.FR" class="footer-logo">
+                    <img src="img/logo.png" alt="QRGUIDE.FR" class="footer-logo">
                     <p>Le guide numérique nouvelle génération pour locations saisonnières</p>
                 </div>
                 <div class="footer-col">
