Add Stripe payment integration and EmailJS contact form

--- a/tarifs.html
+++ b/tarifs.html
@@ -234,7 +234,7 @@
                     <a href="index.html#fonctionnalites">Fonctionnalités</a>
                     <a href="index.html#comment-ca-marche">Comment ça marche</a>
                     <a href="tarifs.html">Tarifs</a>
-                    <a href="../index.html" target="_blank">Voir la démo</a>
+                    <a href="demo-guide/index.html" target="_blank">Voir la démo</a>
                 </div>
                 <div class="footer-col">
                     <h4>Support</h4>
