--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p>Un simple QR code, une expérience 5 étoiles. Divisez par 10 les messages répétitifs et offrez une expérience inoubliable à vos voyageurs.</p>
                     <div class="hero-buttons">
                         <a href="contact.html" class="btn-hero">Créer mon guide</a>
-                        <a href="#demo" class="btn-secondary">Voir la démo</a>
+                        <a href="demo-guide/index.html" target="_blank" class="btn-secondary">Voir la démo</a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -213,7 +213,7 @@
             
             <div class="demo-qr">
                 <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://qrguide.fr/demo" alt="QR Code Demo">
-                <p>Ou visitez directement : <a href="../index.html" target="_blank">Voir la démo</a></p>
+                <p>Ou visitez directement : <a href="demo-guide/index.html" target="_blank">Voir la démo</a></p>
             </div>
         </div>
     </section>
@@ -275,7 +275,7 @@
                     <a href="#fonctionnalites">Fonctionnalités</a>
                     <a href="#comment-ca-marche">Comment ça marche</a>
                     <a href="tarifs.html">Tarifs</a>
-                    <a href="../index.html" target="_blank">Voir la démo</a>
+                    <a href="demo-guide/index.html" target="_blank">Voir la démo</a>
                 </div>
                 <div class="footer-col">
                     <h4>Support</h4>
