Refonte complète: pages légales, renommage contact/abonnement, page hôtels et améliorations UX

--- a/success.html
+++ b/success.html
@@ -67,7 +67,9 @@
                     <a href="index.html#fonctionnalites">Fonctionnalités</a>
                     <a href="index.html#comment-ca-marche">Comment ça marche</a>
                     <a href="tarifs.html">Tarifs</a>
-                    <a href="contact.html" class="btn-primary">Commencer</a>
+                    <a href="hotels.html">Hôtels</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="abonnement.html" class="btn-primary">S'abonner</a>
                 </div>
             </nav>
         </div>
@@ -105,7 +107,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <img src="img/logo.png" alt="QRGUIDE.FR" class="footer-logo">
+                    <img src="img/logo_blanc.png" alt="QRGUIDE.FR" class="footer-logo">
                     <p>Le guide numérique nouvelle génération pour locations saisonnières</p>
                 </div>
                 <div class="footer-col">
@@ -113,6 +115,7 @@
                     <a href="index.html#fonctionnalites">Fonctionnalités</a>
                     <a href="index.html#comment-ca-marche">Comment ça marche</a>
                     <a href="tarifs.html">Tarifs</a>
+                    <a href="hotels.html">Hôtels</a>
                     <a href="demo-guide/index.html" target="_blank">Voir la démo</a>
                 </div>
                 <div class="footer-col">
@@ -123,9 +126,9 @@
                 </div>
                 <div class="footer-col">
                     <h4>Légal</h4>
-                    <a href="#">Mentions légales</a>
-                    <a href="#">CGV</a>
-                    <a href="#">Confidentialité</a>
+                    <a href="mentions-legales.html">Mentions légales</a>
+                    <a href="cgv.html">CGV</a>
+                    <a href="politique-confidentialite.html">Confidentialité</a>
                 </div>
             </div>
             <div class="footer-bottom">
