--- a/tarifs.html
+++ b/tarifs.html
@@ -69,7 +69,7 @@
                         <p style="margin: 4px 0 0 0; font-size: 1.5rem; font-weight: 700; color: var(--primary-color);">158€</p>
                         <p style="margin: 8px 0 0 0; font-size: 0.85rem; color: #666;">Puis 8€/mois</p>
                     </div>
-                    <a href="contact.html?plan=mensuel" class="btn-pricing" style="margin-top: 20px;">Choisir ce plan</a>
+                    <a href="abonnement.html?plan=mensuel" class="btn-pricing" style="margin-top: 20px;">Choisir ce plan</a>
                 </div>
 
                 <!-- Abonnement Annuel -->
@@ -98,7 +98,7 @@
                         <p style="margin: 4px 0 0 0; font-size: 1.5rem; font-weight: 700; color: var(--primary-color);">225€</p>
                         <p style="margin: 8px 0 0 0; font-size: 0.85rem; color: #666;">Puis 75€/an</p>
                     </div>
-                    <a href="contact.html?plan=annuel" class="btn-pricing btn-primary" style="margin-top: 20px;">Choisir ce plan</a>
+                    <a href="abonnement.html?plan=annuel" class="btn-pricing btn-primary" style="margin-top: 20px;">Choisir ce plan</a>
                 </div>
             </div>
             
