Email automatique confirmation + Guide abonnements récurrents Stripe

--- a/abonnement.html
+++ b/abonnement.html
@@ -306,9 +306,9 @@
                         </div>
 
                         <div class="form-total">
-                            <div class="total-label">Total premier paiement :</div>
+                            <div class="total-label">Total premier paiement</div>
                             <div class="total-amount" id="totalAmount">158€</div>
-                            <p style="font-size: 0.85rem; color: #666; margin-top: 8px; text-align: right;">Puis 8€/mois (ou 75€/an selon formule)</p>
+                            <p style="font-size: 0.85rem; color: #666; margin-top: 8px;">Puis 8€/mois (ou 75€/an selon formule)</p>
                         </div>
 
                         <!-- What happens next -->
