Fix: Redirection admin vers demo-guide/admin.html

--- a/login.html
+++ b/login.html
@@ -278,7 +278,7 @@
                 
                 // Rediriger selon le rôle
                 if (userData.role === 'admin') {
-                    window.location.href = 'admin.html';
+                    window.location.href = 'demo-guide/admin.html';
                 } else {
                     window.location.href = 'mon-compte.html';
                 }
@@ -329,7 +329,7 @@
                 
                 if (userData) {
                     if (userData.role === 'admin') {
-                        window.location.href = 'admin.html';
+                        window.location.href = 'demo-guide/admin.html';
                     } else {
                         window.location.href = 'mon-compte.html';
                     }
