Ajout bouton Se connecter dans header

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <a href="tarifs.html">Tarifs</a>
                     <a href="hotels.html">Hôtels</a>
                     <a href="contact.html">Contact</a>
+                    <a href="login.html" style="margin-right: 12px;">🔐 Se connecter</a>
                     <a href="abonnement.html" class="btn-primary">S'abonner</a>
                 </div>
             </nav>
