Fix Firebase Render (JSON support) + texte processus automatique

--- a/abonnement.html
+++ b/abonnement.html
@@ -313,27 +313,27 @@
 
                         <!-- What happens next -->
                         <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 32px; border-radius: 16px; margin: 40px 0;">
-                            <h3 style="color: white; text-align: center; margin-bottom: 24px; font-size: 1.5rem;">Après votre paiement</h3>
+                            <h3 style="color: white; text-align: center; margin-bottom: 24px; font-size: 1.5rem;">🚀 Démarrage instantané</h3>
                             <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px;">
                                 <div style="text-align: center;">
                                     <div style="width: 48px; height: 48px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 1.3rem; margin: 0 auto 12px;">1</div>
-                                    <strong style="display: block; margin-bottom: 6px;">Validation immédiate</strong>
-                                    <span style="opacity: 0.9; font-size: 0.9rem;">Paiement sécurisé Stripe</span>
+                                    <strong style="display: block; margin-bottom: 6px;">Paiement validé</strong>
+                                    <span style="opacity: 0.9; font-size: 0.9rem;">Sécurisé par Stripe</span>
                                 </div>
                                 <div style="text-align: center;">
                                     <div style="width: 48px; height: 48px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 1.3rem; margin: 0 auto 12px;">2</div>
-                                    <strong style="display: block; margin-bottom: 6px;">Contact sous 2h</strong>
-                                    <span style="opacity: 0.9; font-size: 0.9rem;">Pour vos informations</span>
+                                    <strong style="display: block; margin-bottom: 6px;">Email reçu</strong>
+                                    <span style="opacity: 0.9; font-size: 0.9rem;">Vos identifiants de connexion</span>
                                 </div>
                                 <div style="text-align: center;">
                                     <div style="width: 48px; height: 48px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 1.3rem; margin: 0 auto 12px;">3</div>
-                                    <strong style="display: block; margin-bottom: 6px;">Création 48h</strong>
-                                    <span style="opacity: 0.9; font-size: 0.9rem;">Guide personnalisé</span>
+                                    <strong style="display: block; margin-bottom: 6px;">Connexion</strong>
+                                    <span style="opacity: 0.9; font-size: 0.9rem;">Accès à votre espace</span>
                                 </div>
                                 <div style="text-align: center;">
                                     <div style="width: 48px; height: 48px; background: rgba(255,255,255,0.2); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 1.3rem; margin: 0 auto 12px;">4</div>
-                                    <strong style="display: block; margin-bottom: 6px;">Activation</strong>
-                                    <span style="opacity: 0.9; font-size: 0.9rem;">Accès instantané</span>
+                                    <strong style="display: block; margin-bottom: 6px;">Créez votre guide</strong>
+                                    <span style="opacity: 0.9; font-size: 0.9rem;">En totale autonomie</span>
                                 </div>
                             </div>
                         </div>
