Fix: centrage résumé commande dans total

--- a/abonnement.html
+++ b/abonnement.html
@@ -561,7 +561,7 @@
             // Mettre à jour l'affichage du total des plaques
             document.getElementById('plaqueTotal').textContent = (plaqueQty * plaquePrice) + '€';
 
-            document.getElementById('totalAmount').innerHTML = total + '€<br><small style="font-size: 14px; opacity: 0.7;">' + description.join(' + ') + '</small>';
+            document.getElementById('totalAmount').innerHTML = total + '€<br><small style="font-size: 0.85rem; opacity: 0.8; display: block; text-align: center; margin-top: 8px;">' + description.join(' + ') + '</small>';
         }
 
         // ============================================
