Ajout bouton Se connecter sur toutes les pages + détails Pack Création

--- a/hotels.html
+++ b/hotels.html
@@ -21,8 +21,7 @@
                     <a href="index.html#comment-ca-marche">Comment ça marche</a>
                     <a href="tarifs.html">Tarifs</a>
                     <a href="hotels.html" class="active">Hôtels</a>
-                    <a href="contact.html">Contact</a>
-                    <a href="abonnement.html" class="btn-primary">S'abonner</a>
+                    <a href="contact.html">Contact</a>                    <a href="login.html" style="margin-right: 12px;">Se connecter</a>                    <a href="abonnement.html" class="btn-primary">S'abonner</a>
                 </div>
             </nav>
         </div>
