--- a/abonnement.html
+++ b/abonnement.html
@@ -77,6 +77,7 @@
                     <a href="tarifs.html">Tarifs</a>
                     <a href="hotels.html">Hôtels</a>
                     <a href="contact.html">Contact</a>
+                    <a href="login.html" style="margin-right: 12px;">Se connecter</a>
                     <a href="abonnement.html" class="btn-primary">S'abonner</a>
                 </div>
             </nav>
@@ -182,6 +183,55 @@
                                     Premier paiement : <strong>225€</strong>
                                 </div>
                             </label>
+                        </div>
+
+                        <!-- Pack Création Détails -->
+                        <div style="max-width: 900px; margin: 40px auto; padding: 32px; background: #f8f9fa; border-radius: 16px; border: 2px solid #e9ecef;">
+                            <h3 style="text-align: center; margin-bottom: 24px; color: var(--text-dark);">📦 Ce qui est inclus dans le Pack Création (150€)</h3>
+                            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 16px;">
+                                <div style="display: flex; align-items: start; gap: 12px;">
+                                    <span style="color: var(--primary-color); font-size: 1.2rem;">✓</span>
+                                    <div>
+                                        <strong>Accès à votre espace personnel</strong>
+                                        <p style="margin: 4px 0 0 0; font-size: 0.9rem; color: #666;">Créez votre guide en autonomie</p>
+                                    </div>
+                                </div>
+                                <div style="display: flex; align-items: start; gap: 12px;">
+                                    <span style="color: var(--primary-color); font-size: 1.2rem;">✓</span>
+                                    <div>
+                                        <strong>QR code personnalisé</strong>
+                                        <p style="margin: 4px 0 0 0; font-size: 0.9rem; color: #666;">Fichier PDF haute qualité</p>
+                                    </div>
+                                </div>
+                                <div style="display: flex; align-items: start; gap: 12px;">
+                                    <span style="color: var(--primary-color); font-size: 1.2rem;">✓</span>
+                                    <div>
+                                        <strong>16 sections configurables</strong>
+                                        <p style="margin: 4px 0 0 0; font-size: 0.9rem; color: #666;">Wi-Fi, équipements, recommandations...</p>
+                                    </div>
+                                </div>
+                                <div style="display: flex; align-items: start; gap: 12px;">
+                                    <span style="color: var(--primary-color); font-size: 1.2rem;">✓</span>
+                                    <div>
+                                        <strong>Intégration complète</strong>
+                                        <p style="margin: 4px 0 0 0; font-size: 0.9rem; color: #666;">Photos, cartes, vidéos</p>
+                                    </div>
+                                </div>
+                                <div style="display: flex; align-items: start; gap: 12px;">
+                                    <span style="color: var(--primary-color); font-size: 1.2rem;">✓</span>
+                                    <div>
+                                        <strong>Modifications illimitées</strong>
+                                        <p style="margin: 4px 0 0 0; font-size: 0.9rem; color: #666;">Mettez à jour quand vous voulez</p>
+                                    </div>
+                                </div>
+                                <div style="display: flex; align-items: start; gap: 12px;">
+                                    <span style="color: var(--primary-color); font-size: 1.2rem;">✓</span>
+                                    <div>
+                                        <strong>Jusqu'à 3 logements</strong>
+                                        <p style="margin: 4px 0 0 0; font-size: 0.9rem; color: #666;">Gérez plusieurs propriétés</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div style="text-align: left; margin: 40px 0 12px 0;">
@@ -561,7 +611,8 @@
             // Mettre à jour l'affichage du total des plaques
             document.getElementById('plaqueTotal').textContent = (plaqueQty * plaquePrice) + '€';
 
-            document.getElementById('totalAmount').innerHTML = total + '€<br><small style="font-size: 0.85rem; opacity: 0.8; display: block; text-align: center; margin-top: 8px;">' + description.join(' + ') + '</small>';
+            // Mettre à jour seulement le montant total (le reste est dans le HTML)
+            document.getElementById('totalAmount').textContent = total + '€';
         }
 
         // ============================================
