Fix: correction mapping données formulaire vers backend

--- a/abonnement.html
+++ b/abonnement.html
@@ -697,10 +697,9 @@
                         plan: plan.value,
                         plaqueQty: plaqueQty,
                         customerInfo: {
-                            firstName: formData.firstName,
-                            lastName: formData.lastName,
+                            name: formData.nom,
                             email: formData.email,
-                            phone: formData.phone
+                            phone: formData.telephone
                         },
                         successUrl: `${window.location.origin}/success.html`,
                         cancelUrl: `${window.location.origin}/abonnement.html`
